2005-01-16  Per Bothner  <per@bothner.com>

	* IndirectableLocation.java (INDIRECT_FLUIDS): New constant.
	* SimpleEnvironment.java (addLocation): Set value to INDIRECT_FLUIDS.
	* PlainLocation.java (setWithSave): Check for INDIRECT_FLUIDS.
	* SharedLocation.java (setWithSave): Likewise.
	Fixes Savannah bug #11578.

2005-01-07  Per Bothner  <per@bothner.com>

	* NamedLocation.java: Remove unneeded import.

2005-01-05  Per Bothner  <per@bothner.com>

	* Location.java (counter, id): Comment out, except for debugging.
	(toString): Update accordingly.
	* NamedLocation.java (toString): Remove - use inherited version.

2005-01-02  Per Bothner  <per@bothner.com>

	* CallContext.java, LocationEnumeration.java, NamedLocation.java,
	Namespace.java, SimpleEnvironment.java, Symbol.java:
	Change "select" (preprocessor) syntax.

2004-12-29  Per Bothner  <per@bothner.com>

	* IndirectableLocation.java: Changed to inherit directly from
	Location, rather than via NamedLocation.
	(getKeySymbol, getKeyProperty): New methods.
	(setBase): Simplify.
	* NamedLocation.java: Inherit from IndirectableLocation.
	* PlainLocation.java: Inherit from NamedLocation
	* SharedLocation.java: Likewise.
	* Location.java (getKeySymbol, getKeyProperty): New methods.
	(toString): New method.

	* InheritingEnvironment.java (lookupDirect): Moved to super class.
	* SimpleEnvironment.java (lookupDirect): New method.
	(put): Simplify using getLocation.
	(newEntry): New helper method.
	* Environment.java (addLocation): Change to a non-void return.
	* InheritingEnvironment.java (getLocation): Use new addLocation.

	* UnboundLocation.java: Removed class - just use a PlainLocation.
	* Makefile.am: Update accordingly.
	* IndirectableLocation.java (undefine): Handle UNBOUND ourself.
	* Location.java (make): No longer use UnboundLocation.
	* LocationEnumeration.java (nextLocation): Likewise.
	* NamedLocation.java (genEnvironment): Update likewise.
	* SimpleEnvironment.java (unbound): Rename field ...